# public_picow_websocket

./: .gitignore  CMakeLists.txt  DuncanReame.txt  README.md  fsdata.c  runCmake.sh  runPerl.sh
fs/: index.html  websocket.js
src/: CMakeLists.txt  fs.c  fsdata.c  handle_ws_frames.c  handle_ws_frames.h  httpd_ws.c  httpd_ws.h  lwipopts.h  main.c
src/fs/: general.js  index.html  manifest.json  websocket.js
